--- a/static/css/profile_content.css
+++ b/static/css/profile_content.css
@@ -62,6 +62,23 @@ body {
   font-size: 1rem;
   opacity: 0.9;
 }
+/* Default avatar styling */
+.profile-avatar.default-avatar {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: #f0f0f0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+    color: #555;
+    font-weight: bold;
+}
+
+.avatar-initials {
+    text-transform: uppercase;
+}
 
 /* Details Section */
 .profile-details {
